[project]
name = "blockblast-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.2.3",
    "numpy>=2.4.0",
    "pygame>=2.6.1",
    "rich>=14.2.0",
    "sb3-contrib>=2.7.1",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
